--- a/Lab_Management.v1/src/main/resources/templates/admin/labs-edit-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/labs-edit-form.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <!-- Submit button -->
-        <button type="submit" class="btn btn-primary">Lưu</button>
+        <button type="submit" class="btn btn-primary" onclick="return confirm('Bạn có chắc chắn muốn sửa?')">Sửa</button>
     </form>
     <br>
     <br>
